--- a/UserAuthSystem/package.json
+++ b/UserAuthSystem/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.2.2"
   },
   "devDependencies": {
