--- a/mern_auth_proj/client/package.json
+++ b/mern_auth_proj/client/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
